<resources>
    <string name="app_name">GymApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember Me</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="proceed">Proceed</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="mass_gain">Mass Gain</string>
    <string name="choose_your_memberships">Choose your memberships</string>
    <string name="your_username">Your Username:</string>
    <string name="username">Username</string>
    <string name="your_password">Your password:</string>
    <string name="passwordtv">passwordTV</string>
    <string name="your_name">Your name:</string>
    <string name="nametv">nameTV</string>
    <string name="your_phone_number">Your phone number:</string>
    <string name="your_height">Your height:</string>
    <string name="heighttv">heightTV</string>
    <string name="your_weight">Your weight:</string>
    <string name="weighttv">weightTV</string>
    <string name="your_bmi_auto_calculated">Your BMI (Auto-Calculated):</string>
    <string name="bmitv">bmiTV</string>
    <string name="your_memberships">Your memberships:</string>
    <string name="update_settings">Update Settings</string>
    <string name="phonetv">phoneTV</string>
    <string name="usernameET">username</string>
    <string name="passwordET">Password</string>
    <string name="nameET">Name</string>
    <string name="phoneET">Phone</string>
    <string name="heightET">height</string>
    <string name="weightET">weight</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="mass_gain">Mass Gain</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="weight_loss">Weight Loss</string>
</resources>