<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivities.BrowseFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/usernameTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/your_username" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_alignParentEnd="true"
        android:text="@string/username"
        android:textStyle="bold"
        style="@style/textViewStyle" />

    <TextView
        android:id="@+id/passwordTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTVText"
        android:text="@string/your_password" />

    <TextView
        android:id="@+id/passwordTV"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTV"
        android:layout_alignParentEnd="true"
        android:text="@string/passwordtv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTVText"
        android:text="@string/your_name" />

    <TextView
        android:id="@+id/nameTV"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTV"
        android:layout_alignParentEnd="true"
        android:text="@string/nametv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phoneTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTVText"
        android:text="@string/your_phone_number" />

    <TextView
        android:id="@+id/phoneTV"
        style="@style/textViewStyle"
        android:layout_below="@id/nameTV"
        android:layout_alignParentEnd="true"
        android:text="@string/phonetv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/heightTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneTVText"
        android:text="@string/your_height" />

    <TextView
        android:id="@+id/heightTV"
        style="@style/textViewStyle"
        android:layout_below="@id/phoneTV"
        android:layout_alignParentEnd="true"
        android:text="@string/heighttv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weightTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightTVText"
        android:text="@string/your_weight" />

    <TextView
        android:id="@+id/weightTV"
        style="@style/textViewStyle"
        android:layout_below="@id/heightTV"
        android:layout_alignParentEnd="true"
        android:text="@string/weighttv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bmiTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightTVText"
        android:text="@string/your_bmi_auto_calculated" />

    <TextView
        android:id="@+id/bmiTV"
        style="@style/textViewStyle"
        android:layout_below="@+id/weightTV"
        android:layout_alignParentEnd="true"
        android:text="@string/bmitv"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/membershipsTVText"
        style="@style/textViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiTV"
        android:layout_centerHorizontal="true"
        android:text="@string/your_memberships"
        android:layout_marginTop="50dp"/>

    <ListView
        android:id="@+id/preferenceListView"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_below="@id/membershipsTVText"
        android:textAlignment="center"
        android:contextClickable="false"
        >

    </ListView>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_settings"
        android:layout_below="@id/preferenceListView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
